force-app/main/default/objects/Cloud_Model__c/Cloud_Model__c.object-meta.xml
<CustomObject>
    <description>Stores available cloud-based GenAI services or models.</description>
    <label>Cloud Model</label>
    <nameField>
        <label>Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cloud Models</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>