force-app/main/default/objects/Cloud_Model__c/fields/Cloud_Provider__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Provider__c</fullName>
    <label>Cloud Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>AWS</fullName><default>false</default><label>AWS</label></value>
            <value><fullName>Azure</fullName><default>false</default><label>Azure</label></value>
            <value><fullName>Google Cloud</fullName><default>false</default><label>Google Cloud</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>