force-app/main/default/objects/Cloud_Model__c/fields/Data_Residency_Region__c.field-meta.xml
<CustomField>
    <fullName>Data_Residency_Region__c</fullName>
    <label>Data Residency Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Australia</fullName><default>false</default><label>Australia</label></value>
            <value><fullName>US</fullName><default>false</default><label>US</label></value>
            <value><fullName>EU</fullName><default>false</default><label>EU</label></value>
            <value><fullName>Asia-Pacific</fullName><default>false</default><label>Asia-Pacific</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>