force-app/main/default/objects/Cloud_Model__c/fields/Estimated_Cost_Per_1K_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_Per_1K_Tokens__c</fullName>
    <label>Estimated Cost Per 1K Tokens</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>