force-app/main/default/objects/Cloud_Model__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Text Generation</fullName><default>false</default><label>Text Generation</label></value>
            <value><fullName>Image Generation</fullName><default>false</default><label>Image Generation</label></value>
            <value><fullName>Code Generation</fullName><default>false</default><label>Code Generation</label></value>
            <value><fullName>Document Analysis</fullName><default>false</default><label>Document Analysis</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>