force-app/main/default/objects/Cloud_Model__c/listViews/All_Cloud_Models.listView-meta.xml
<ListView>
    <fullName>All_Cloud_Models</fullName>
    <columns>NAME</columns>
    <columns>Cloud_Provider__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Data_Residency_Region__c</columns>
    <columns>Status__c</columns>
    <columns>Estimated_Cost_Per_1K_Tokens__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Cloud Models</label>
</ListView>